apps/beszel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel
  namespace: beszel
spec:
  selector:
    app: beszel
  ports:
    - name: http
      port: 80
      targetPort: 8090
