apps/beszel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beszel
  namespace: beszel
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-authentik-forward-auth@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: beszel.def4alt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beszel
                port:
                  number: 80
  tls:
    - hosts:
        - beszel.def4alt.com
      secretName: beszel-tls
